plumage/static/css/code.scss
/* Same color as Monokai background generated by Pygments */
$back_color: #272822;
/* Code block inner padding */
$pad: 0.5rem;

.codehilite,
.highlight,
code,
pre {
  font-family: 'Source Code Pro', Monaco, Menlo, Consolas, 'Courier New', monospace;
}

.codehilite, .highlight {

  .filename {
    display: block;
    padding: $pad $pad 0 $pad;
    /* Same as Bootstrap's <pre> default value */
    font-size: 87.5%;
  }

  pre {
    padding: $pad 0;
    color: inherit;
  }

  code {
    word-wrap: normal;
  }

  pre code {
    word-break: normal;
    /* Highlight whole lines */
    span.hll {
      display: block;
    }
  }
}

.codehilite {
  pre {
    overflow: inherit;
    table-layout: fixed;
    width: 100%;
    white-space: pre-wrap;

    span[id^="coderow-"] {
      display: table-row;
    }
  }
}

/* Prevents line numbers to be selected */
span.linenos {
  /* Same as Bootstrap's .user-select-none class */
  -webkit-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  user-select: none !important;

  /* Gutter's border separating numbers from code */
  box-shadow: -0.05rem 0 #6c757d inset;

  background-color: $back_color;
  color: var(--secondary);

  /* Highlight every every Nth line number in the gutter */
  &.special {
    background-clip: padding-box;
    background-color: var(--secondary);
  }

  .codehilite & {
    /* Prevents the long lines to wrap below the line number gitter on the left */
    display: table-cell;
    /* Simulates right margin, which has no effect on table cells */
    border-right: $pad solid transparent;
  }

  .highlight & {
    /* Makes the left-side line number gutter sticky */
    position: sticky;
    float: left;
    left: (-$pad);
    padding: 0 0 0 $pad*2;
    margin-left: (-$pad);
    margin-right: $pad;
  }
}

/* Display line numbers with PyMdown Extensions' syntax:
 * https://facelessuser.github.io/pymdown-extensions/extensions/highlight/#line-number-styles
 * */
.highlight [data-linenos]::before {
  content: attr(data-linenos);
}

